hotfix : 크롤링 최적화를 위한 코드 수정 및 Dockerfile 경량화